--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-01-16 11:53+0000\n"
-"PO-Revision-Date: 2020-01-16 11:53+0000\n"
+"POT-Creation-Date: 2020-01-16 14:32+0000\n"
+"PO-Revision-Date: 2020-01-16 14:32+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -12,97 +12,23 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-msgid "Enter your email address or username."
-msgstr ""
-"შეიყვანეთ თქვენი "
-"ელ.ფოსტის მისამართი"
-
-msgid "Email or username"
-msgstr "შეიყვანეთ ელ.ფოსტა "
-
-msgid "Enter the password that accompanies your email address."
-msgstr "შეიყვანეთ პაროლი "
-
-msgid "Password"
-msgstr "პაროლი"
-
-msgid "Log in"
-msgstr "შესვლა"
-
-msgid "Add effect"
-msgstr "ეფექტის დამატება"
-
-msgid "Save configuration"
-msgstr "კონფიგურაციის შენახვა"
-
-msgid "Confirm"
-msgstr "დადასტურება"
-
-msgid "Filter"
-msgstr "ფილტრი"
-
-msgid "Submit"
-msgstr "დადასტურება"
-
-msgid "Search"
-msgstr "ძიება"
-
-msgid "Settings"
-msgstr "პარამეტრები"
-
-msgid "Upload"
-msgstr "ატვირთვა"
-
-msgid "Delete"
-msgstr "წაშლა"
-
-msgid "Remove"
-msgstr "ამოშლა"
-
-msgid "Add"
-msgstr "დამატება"
-
-msgid "Create"
-msgstr "შექმნა"
-
-msgid "Install"
-msgstr "დაყენება"
-
-msgid "Save"
-msgstr "შენახვა"
-
-msgid "Export"
-msgstr "ექსპორტი"
-
-msgid "Import"
-msgstr "იმპორტი"
-
-msgid "Update"
-msgstr "განახლება"
-
-msgid "Manage"
-msgstr "მართვა"
-
-msgid "Configure"
-msgstr "კონფიგურირება"
-
-msgid "Download"
-msgstr "გადმოტვირთვა"
-
-msgid "Edit"
-msgstr "რედაქტირება"
-
-msgid "Cancel"
-msgstr "გაუქმება"
-
-msgid "Block"
-msgstr "ბლოკი"
+msgid "Content type"
+msgstr "კონტენტის ტიპი"
 
 msgid "Vocabulary"
 msgstr "ლექსიკონი"
 
-msgid "Home"
-msgstr "მთავარი"
+msgid "Description"
+msgstr "აღწერა"
+
+msgid "User"
+msgstr "მომხმარებელი"
+
+msgid "Donation"
+msgstr "შემოწირულობა"
+
+msgid "Block"
+msgstr "ბლოკი"
 
 msgid "Text format"
 msgstr "ტექსტის ფორმატი"
@@ -110,8 +36,8 @@ msgstr "ტექსტის ფორმატი"
 msgid "Language"
 msgstr "ენა"
 
-msgid "Content type"
-msgstr "კონტენტის ტიპი"
+msgid "Page"
+msgstr "გვერდი"
 
 msgid "Menu"
 msgstr "მენიუ"
@@ -122,23 +48,14 @@ msgstr "როლი"
 msgid "Date format"
 msgstr "თარიღის ფორმატი"
 
-msgid "Create new account"
-msgstr "რეგისტრაცია"
-
-msgid "Reset your password"
-msgstr "პაროლის აღდგენა"
-
-msgid "Description"
-msgstr "აღწერა"
-
-msgid "Content"
-msgstr "კონტენტი"
-
-msgid "User"
-msgstr "მომხმარებელი"
+msgid "Add"
+msgstr "დამატება"
 
 msgid "Forms"
 msgstr "ფორმები"
+
+msgid "Home"
+msgstr "მთავარი"
 
 msgid "User interface"
 msgstr "მომხმარებლის ინტერფეისი"
@@ -157,6 +74,9 @@ msgstr "მომხმარებელი"
 
 msgid "Pages"
 msgstr "გვერდები"
+
+msgid "Save configuration"
+msgstr "კონფიგურაციის შენახვა"
 
 msgid "delete"
 msgstr "წაშლა"
@@ -184,8 +104,17 @@ msgstr "სუფიქსი"
 msgid "Approve"
 msgstr "დადასტურება"
 
+msgid "Delete"
+msgstr "წაშლა"
+
+msgid "Submit"
+msgstr "დადასტურება"
+
 msgid "Operations"
 msgstr "ოპერაციები"
+
+msgid "Content"
+msgstr "კონტენტი"
 
 msgid "Attribute"
 msgstr "ატრიბუტი"
@@ -240,6 +169,15 @@ msgstr "ოპერაციები"
 
 msgid "disabled"
 msgstr "გამორთულია"
+
+msgid "Confirm"
+msgstr "დადასტურება"
+
+msgid "Cancel"
+msgstr "გაუქმება"
+
+msgid "Remove"
+msgstr "ამოშლა"
 
 msgid "Last comment"
 msgstr "ბოლო კომენტრარი"
@@ -309,6 +247,9 @@ msgstr "მთავარი გვერდი"
 msgid "Home page"
 msgstr "მთავარი გვერდი"
 
+msgid "Download"
+msgstr "გადმოტვირთვა"
+
 msgid "Version"
 msgstr "ვერსია"
 
@@ -336,6 +277,9 @@ msgstr "ფაილის მდებარეობა"
 msgid "Advanced options"
 msgstr "დამატებითი ოფციები"
 
+msgid "Edit"
+msgstr "რედაქტირება"
+
 msgid "Date"
 msgstr "თარიღი"
 
@@ -344,6 +288,9 @@ msgstr "ზომა"
 
 msgid "Links"
 msgstr "ბმულები"
+
+msgid "Search"
+msgstr "ძიება"
 
 msgid "Daily"
 msgstr "ყოველდღიური"
@@ -369,6 +316,9 @@ msgstr "შეტყობინება"
 msgid "Account Name"
 msgstr "მომხმარებლის სახელი"
 
+msgid "Password"
+msgstr "პაროლი"
+
 msgid "Block settings"
 msgstr "ბლოკის პარამეტრები"
 
@@ -390,9 +340,6 @@ msgstr "სურათი"
 msgid "Types"
 msgstr "ტიპები"
 
-msgid "Hierarchy"
-msgstr "იერარქია"
-
 msgid "Required"
 msgstr "სავალდებულო"
 
@@ -407,6 +354,9 @@ msgstr "კატეგორია"
 
 msgid "Add container"
 msgstr "კონტეინერის დამატება"
+
+msgid "Settings"
+msgstr "პარამეტრები"
 
 msgid "Name"
 msgstr "სახელი"
@@ -426,8 +376,14 @@ msgstr "მშობელ გვერდზე გადასვლა"
 msgid "Go to next page"
 msgstr "შემდეგ გვერდზე გადასვლა"
 
+msgid "Import"
+msgstr "იმპორტი"
+
 msgid "Book"
 msgstr "წიგნი"
+
+msgid "Export"
+msgstr "ექსპორტი"
 
 msgid "settings"
 msgstr "პარამეტრები"
@@ -446,6 +402,9 @@ msgstr "დახმარება"
 
 msgid "Image settings"
 msgstr "სურათის პარამეტრები"
+
+msgid "Update"
+msgstr "განახლება"
 
 msgid "Open"
 msgstr "ღია"
@@ -531,6 +490,9 @@ msgstr "ფორუმის სახელი"
 msgid "forum"
 msgstr "ფორუმი"
 
+msgid "Manage"
+msgstr "მართვა"
+
 msgid "Refresh"
 msgstr "განახლება"
 
@@ -582,6 +544,9 @@ msgstr "უცნობი"
 msgid "Attachment"
 msgstr "მიმაგრებული ფაილი"
 
+msgid "Upload"
+msgstr "ატვირთვა"
+
 msgid "Picture"
 msgstr "სურათი"
 
@@ -602,6 +567,9 @@ msgstr "ოპერაცია"
 
 msgid "Continue"
 msgstr "გაგრძელება"
+
+msgid "Configure"
+msgstr "კონფიგურირება"
 
 msgid "Email"
 msgstr "ელ. ფოსტა"
@@ -639,6 +607,9 @@ msgstr "შეტყობინების სათაური."
 msgid "Number of columns"
 msgstr "სვეტების რაოდენობა"
 
+msgid "Create"
+msgstr "შექმნა"
+
 msgid "Separator"
 msgstr "გამყოფი"
 
@@ -669,8 +640,8 @@ msgstr ""
 "კონტენტის ტიპი შვილობილი "
 "გვერდებისთვის"
 
-msgid "Active"
-msgstr "აქტიური"
+msgid "All"
+msgstr "ყველა"
 
 msgid "Done"
 msgstr "დასრულება"
@@ -695,9 +666,6 @@ msgstr "სათაურის გადაწერა"
 
 msgid "CSS class"
 msgstr "CSS კლასი"
-
-msgid "Page"
-msgstr "გვერდი"
 
 msgid "View arguments"
 msgstr "არგუმენტების ნახვა"
@@ -839,6 +807,9 @@ msgstr "გამოქვეყნებული"
 
 msgid "Signature"
 msgstr "ხელმოწერა"
+
+msgid "Filter"
+msgstr "ფილტრი"
 
 msgid "Location"
 msgstr "ადგილმდებარეობა"
@@ -1166,6 +1137,9 @@ msgstr "ყველას მონიშვნა"
 msgid "User login"
 msgstr "მომხმარებლის ავტორიზაცია"
 
+msgid "Log in"
+msgstr "შესვლა"
+
 msgid "Link text"
 msgstr "ბმულის ტექსტი"
 
@@ -1215,6 +1189,9 @@ msgstr "ანონიმური"
 
 msgid "Provider"
 msgstr "პროვაიდერი"
+
+msgid "Install"
+msgstr "დაყენება"
 
 msgid "Save and edit"
 msgstr "შენახვა და რედაქტირება"
@@ -1272,6 +1249,11 @@ msgstr "კომენტარები"
 
 msgid "Full"
 msgstr "სრული"
+
+msgid "1 new"
+msgid_plural "@count new"
+msgstr[0] "1 ახალი"
+msgstr[1] "@count ახალი"
 
 msgid "Condition"
 msgstr "პირობა"
@@ -1886,6 +1868,9 @@ msgstr "დაიწერა"
 
 msgid "Hidden"
 msgstr "დამალული"
+
+msgid "Show"
+msgstr "ჩვენება"
 
 msgid "Site language"
 msgstr "საიტის ენა"
@@ -2550,8 +2535,8 @@ msgstr "გვერდი ვერ მოიძებნა"
 msgid "More help"
 msgstr "მეტი დახმარება"
 
-msgid "Add terms"
-msgstr "ტერმინების დამატება"
+msgid "Sizes"
+msgstr "ზომები"
 
 msgid "« first"
 msgstr "« პირველი"
@@ -2826,15 +2811,6 @@ msgstr "საიტის ინსტალაცია"
 msgid "Finish translations"
 msgstr "თარგმანის დასრულება"
 
-msgid ""
-"By default, dates in this site will be displayed in the chosen time "
-"zone."
-msgstr ""
-"ნაგულისხმევად, ამ საიტზე "
-"თარიღები გამოჩნდება "
-"არჩეული დროის სარტყლის "
-"შესაბამისად."
-
 msgid "Update notifications"
 msgstr "განახლების შეტყობინებები"
 
@@ -2953,6 +2929,9 @@ msgstr "სტილის სახელი"
 msgid "Update effect"
 msgstr "ეფექტის განახლება"
 
+msgid "Add effect"
+msgstr "ეფექტის დამატება"
+
 msgctxt "Long month name"
 msgid "January"
 msgstr "იანვარი"
@@ -3066,60 +3045,26 @@ msgid "Database system version"
 msgstr "მონაცემთა ბაზის ვერსია"
 
 msgid ""
-"A valid email address. All emails from the system will be sent to this "
-"address. The email address is not made public and will only be used if "
-"you wish to receive a new password or wish to receive certain news or "
-"notifications by email."
+"A message has been sent to the new email address %email to confirm the "
+"change. Until confirmed, your current address will be used."
 msgstr ""
-"შეიყვანეთ თქვენი ელ.ფოსტა. "
-"ყველა შეტყობინება "
-"მოგივათ მითითებულ "
-"მისამართზე. ინფორმაცია "
-"კონფიდენციალურია და "
-"იქნება გამოყენებული "
-"მხოლოდ თქვენი "
-"სურვილისამებრ ახალი "
-"პაროლის და "
-"შეტყობინებების "
-"მისაღებად."
+"ელ-ფოსტის ცვლილების "
+"დამადასტურებელი "
+"შეტყობინება "
+"გამოგზავნილია "
+"მისამართზე: %email. "
+"შეტყობინების "
+"დადასტურებამდე თქვენი "
+"ელ-ფოსტა რჩება უცვლელი."
 
-msgid "Provide a password for the new account in both fields."
-msgstr "შეიყვანეთ პაროლი"
+msgid "Donation status"
+msgstr "შემოწირულობის სტატუსი"
 
-msgid "Recommendations to make your password stronger:"
-msgstr ""
-"ძლიერი პაროლისთვის "
-"გაითვალისწინეთ:"
+msgid "Amount of money"
+msgstr "თანხა"
 
-msgid "Make it at least 12 characters"
-msgstr "გახადეთ 12 სიმბოლოზე მეტი"
-
-msgid "Add lowercase letters"
-msgstr ""
-"დაამატეთ დაბალი "
-"რეგისტრის ასოები"
-
-msgid "Add uppercase letters"
-msgstr ""
-"დაამატეთ მაღალი "
-"რეგისტრის ასოები "
-
-msgid "Add numbers"
-msgstr "დაამატეთ ციფრები"
-
-msgid "Add punctuation"
-msgstr "დაამატეთ სასვენი ნიშნები"
-
-msgid "Make it different from your username"
-msgstr ""
-"პაროლი არ უნდა ემთხვეოდეს "
-"მომხმარებლის სახელს"
-
-msgid "Weak"
-msgstr "სუსტი"
-
-msgid "Strong"
-msgstr "ძლიერი"
+msgid "Next payment date"
+msgstr "მომდევნო გადახდის თარიღი"
 
 msgid "Main navigation"
 msgstr "Main navigation"
@@ -3408,8 +3353,102 @@ msgstr ""
 "\r\n"
 "--  [site:name] team"
 
-msgid "All"
-msgstr "ყველა"
+msgid "Active"
+msgstr "აქტიური"
+
+msgid "Enter your email address or username."
+msgstr ""
+"შეიყვანეთ თქვენი "
+"ელ.ფოსტის მისამართი"
+
+msgid "Email or username"
+msgstr "შეიყვანეთ ელ.ფოსტა "
+
+msgid "Enter the password that accompanies your email address."
+msgstr "შეიყვანეთ პაროლი "
+
+msgid "Save"
+msgstr "შენახვა"
+
+msgid "Create new account"
+msgstr "რეგისტრაცია"
+
+msgid "Reset your password"
+msgstr "პაროლის აღდგენა"
+
+msgid "Add terms"
+msgstr "ტერმინების დამატება"
+
+msgid ""
+"A valid email address. All emails from the system will be sent to this "
+"address. The email address is not made public and will only be used if "
+"you wish to receive a new password or wish to receive certain news or "
+"notifications by email."
+msgstr ""
+"შეიყვანეთ თქვენი ელ.ფოსტა. "
+"ყველა შეტყობინება "
+"მოგივათ მითითებულ "
+"მისამართზე. ინფორმაცია "
+"კონფიდენციალურია და "
+"იქნება გამოყენებული "
+"მხოლოდ თქვენი "
+"სურვილისამებრ ახალი "
+"პაროლის და "
+"შეტყობინებების "
+"მისაღებად."
+
+msgid "Provide a password for the new account in both fields."
+msgstr "შეიყვანეთ პაროლი"
+
+msgid "Hierarchy"
+msgstr "იერარქია"
+
+msgid ""
+"By default, dates in this site will be displayed in the chosen time "
+"zone."
+msgstr ""
+"ნაგულისხმევად, ამ საიტზე "
+"თარიღები გამოჩნდება "
+"არჩეული დროის სარტყლის "
+"შესაბამისად."
+
+msgid "Recommendations to make your password stronger:"
+msgstr ""
+"ძლიერი პაროლისთვის "
+"გაითვალისწინეთ:"
+
+msgid "There is no content"
+msgstr "კონტენტი არ არსებობს "
+
+msgid "Make it at least 12 characters"
+msgstr "გახადეთ 12 სიმბოლოზე მეტი"
+
+msgid "Add lowercase letters"
+msgstr ""
+"დაამატეთ დაბალი "
+"რეგისტრის ასოები"
+
+msgid "Add uppercase letters"
+msgstr ""
+"დაამატეთ მაღალი "
+"რეგისტრის ასოები "
+
+msgid "Add numbers"
+msgstr "დაამატეთ ციფრები"
+
+msgid "Add punctuation"
+msgstr "დაამატეთ სასვენი ნიშნები"
+
+msgid "Make it different from your username"
+msgstr ""
+"პაროლი არ უნდა ემთხვეოდეს "
+"მომხმარებლის სახელს"
+
+msgid "Weak"
+msgstr "სუსტი"
+
+msgid "Strong"
+msgstr "ძლიერი"
 
 msgid "News"
 msgstr "სიახლეები"
@@ -3421,9 +3460,6 @@ msgstr ""
 "პაროლის აღდგენის "
 "ინსტრუქციის სანახავად "
 "შეამოწმეთ თქვენი ელ.ფოსტა"
-
-msgid "Show"
-msgstr "ჩვენება"
 
 msgid "Current password"
 msgstr "მიმდინარე პაროლი"
@@ -3450,13 +3486,10 @@ msgstr ""
 "<a href=\":password\">დაგავიწყდა "
 "პაროლი?</a>"
 
-msgid "1 new"
+msgid "Add lowercase letters"
 msgid_plural "@count new"
 msgstr[0] "1 ახალი"
 msgstr[1] "@count ახალი"
-
-msgid "Sizes"
-msgstr "ზომები"
 
 msgid ""
 "Your current password is missing or incorrect; it's required to change "
@@ -3552,12 +3585,6 @@ msgstr ""
 "* Referral-ის მითითება "
 "სავალდებულო არაა"
 
-msgid "I read and agree to the terms and conditions"
-msgstr ""
-"წავიკითხე და ვეთანხმები "
-"რეგისტრაციის წესებს და "
-"პირობებს"
-
 msgid "Personal ID"
 msgstr "მიუთითეთ პირადი ნომერი"
 
@@ -3590,9 +3617,6 @@ msgstr "ვიდეო ბლოგი"
 msgid "All videos"
 msgstr "ყველა ვიდეო"
 
-msgid "There is no content"
-msgstr "კონტენტი არ არსებობს "
-
 msgid "You must agree to the terms and conditions before register"
 msgstr ""
 "რეგისტრაციის "
@@ -3607,6 +3631,21 @@ msgstr "ამობეჭვდა"
 
 msgid "%name is not recognized as a username or an email address."
 msgstr "ელ.ფოსტა %name არ მოიძებნა."
+
+msgid "I read and agree to the terms and conditions"
+msgstr ""
+"წავიკითხე და ვეთანხმები "
+"რეგისტრაციის წესებს და "
+"პირობებს"
+
+msgid ""
+"Date of birthYour current password is missing or incorrect; it's "
+"required to change the %name."
+msgstr ""
+"პაროლის ველი ცარიელია ან "
+"არასწორად არის შეყვანილი. "
+"პაროლი სავალდებულოა "
+"%ელ-ფოსტის შესაცვლელად."
 
 msgid "Become a politician"
 msgstr "გახდი პოლიტიკოსი"
@@ -3883,24 +3922,22 @@ msgstr "სთ"
 msgid "Estimated price in month:"
 msgstr "სავარაუდო ფასი თვეში:"
 
+msgid "Transaction was successfull"
+msgstr ""
+"ტრანზაქცია დასრულდა "
+"წარმატებით\r\n"
+""
+
+msgid "You have recieved"
+msgstr ""
+"თქვენ ჩაგერიცხათ\r\n"
+""
+
 msgid "New Email"
 msgstr "ახალი ელ.ფოსტა"
 
 msgid "Enter new email"
 msgstr "შეიყვანეთ ახალი ელ.ფოსტა"
-
-msgid ""
-"A message has been sent to the new email address %email to confirm the "
-"change. Until confirmed, your current address will be used."
-msgstr ""
-"ელ-ფოსტის ცვლილების "
-"დამადასტურებელი "
-"შეტყობინება "
-"გამოგზავნილია "
-"მისამართზე: %email. "
-"შეტყობინების "
-"დადასტურებამდე თქვენი "
-"ელ-ფოსტა რჩება უცვლელი."
 
 msgid "Your email address has been updated to %mail"
 msgstr ""
@@ -3962,9 +3999,6 @@ msgstr "დააფინანსე პოლიტიკოსი"
 msgid "Ged &#37;"
 msgstr "Ged-ების &#37;"
 
-msgid "Donation"
-msgstr "შემოწირულობა"
-
 msgid "Disposable"
 msgstr "ერთჯერადი"
 
@@ -3986,9 +4020,6 @@ msgstr "პოლიტიკოსის შემოწირულობა"
 msgid "Donation settings"
 msgstr "გადახდების კონფიგურაცია"
 
-msgid "Donation status"
-msgstr "შემოწირულობის სტატუსი"
-
 msgid "Multiple"
 msgstr "მრავალჯერადი"
 
@@ -3997,17 +4028,6 @@ msgstr "პერიოდულობა"
 
 msgid "Donation date"
 msgstr "გადახდის თარიღი "
-
-msgid "Transaction was successfull"
-msgstr ""
-"ტრანზაქცია დასრულდა "
-"წარმატებით\r\n"
-""
-
-msgid "You have recieved"
-msgstr ""
-"თქვენ ჩაგერიცხათ\r\n"
-""
 
 msgid "Profile"
 msgstr "პროფილი"
@@ -4019,9 +4039,6 @@ msgid "Please choose Donation aim OR Donation to politician"
 msgstr ""
 "აირჩიეთ დაფინანსების "
 "მიზანი ან პოლიტიკოსი"
-
-msgid "Amount of money"
-msgstr "თანხა"
 
 msgid "Transaction failed ,try again"
 msgstr ""
@@ -4043,14 +4060,17 @@ msgstr "საჯარო პროფილის შეცვლა"
 msgid "Choose file"
 msgstr "აირჩიეთ სურათი"
 
-msgid "Choose cover photo"
-msgstr "აირჩიეთ გარეკანის ფოტო"
-
 msgid "Politicians rating"
 msgstr "პოლიტიკოსთა რეიტინგი"
 
 msgid "Party list weight"
 msgstr "პარტიული წონა"
+
+msgid "Choose cover photo"
+msgstr "აირჩიეთ გარეკანის ფოტო"
+
+msgid "Donated amount"
+msgstr "შემოწირული თანხა"
 
 msgid "Your new password has been saved."
 msgstr ""
@@ -4084,22 +4104,19 @@ msgstr ""
 "საინვესტიციო თანხა უნდა "
 "შეადგენდეს 10K დოლარს."
 
+msgid "- Select aim -"
+msgstr "- აირჩიეთ მიზანი - "
+
+msgid "- Select politician -"
+msgstr "- აირჩიეთ პოლიტიკოსი - "
+
 msgid "Favorite Video"
 msgstr "ფავორიტი ვიდეო"
-
-msgid "Donated amount"
-msgstr "შემოწირული თანხა"
-
-msgid "Next payment date"
-msgstr "მომდევნო გადახდის თარიღი"
 
 msgid "Regular donation settings"
 msgstr ""
 "ავტომატური დაფინანსების "
 "მართვა"
-
-msgid "Add new payment"
-msgstr "ახალი გადახდის დამატება"
 
 msgid "1 Month"
 msgstr "1 თვე"
@@ -4109,9 +4126,6 @@ msgstr "3 თვე"
 
 msgid "6 Month"
 msgstr "6 თვე"
-
-msgid "Automatic payments"
-msgstr "ავტომატური დაფინანსება"
 
 msgid "Resume"
 msgstr "გაგრძელება"
@@ -4125,14 +4139,14 @@ msgstr "შეჩერება"
 msgid "ACTIVE"
 msgstr "აქტიური"
 
-msgid "Donations history"
-msgstr "გადახდების ისტორია"
-
 msgid "Regular donation was activated"
 msgstr "შემოწირულობა"
 
 msgid "Payment execution date"
 msgstr "თანხის ჩამოჭრის თარიღი"
+
+msgid "Add new payment"
+msgstr "ახალი გადახდის დამატება"
 
 msgid "Paying date"
 msgstr "გადახდის თარიღი"
@@ -4144,6 +4158,9 @@ msgid "Donation has been changed."
 msgstr ""
 "დონაცია წარმატებით "
 "შეიცვალა"
+
+msgid "Donations history"
+msgstr "გადახდების ისტორია"
 
 msgid "Donations"
 msgstr "გადახდები"
@@ -4167,6 +4184,9 @@ msgstr ""
 "ავტომატური დაფინანსების "
 "მართვა"
 
+msgid "Automatic payments"
+msgstr "ავტომატური დაფინანსება"
+
 msgid ""
 "The edited verison of Periodicity and date will be valid after the "
 "next payment."
@@ -4174,6 +4194,14 @@ msgstr ""
 "პერიოდულობის და თარიღის "
 "ცვლილება ძალაში შევა "
 "შემდეგი გადახდიდან."
+
+msgid "Transaction history"
+msgstr "გადახდების ისტორია"
+
+msgid "Invalid phone number."
+msgstr ""
+"ტელეფონის ნომერი არ არის "
+"ვალიდური."
 
 msgid "Every month"
 msgstr "ყოველ თვე"
@@ -4184,22 +4212,16 @@ msgstr "3 თვეში ერთხელ"
 msgid "Once in every 6 months"
 msgstr "6 თვეში ერთხელ"
 
-msgid ""
-"Date of birthYour current password is missing or incorrect; it's "
-"required to change the %name."
-msgstr ""
-"პაროლის ველი ცარიელია ან "
-"არასწორად არის შეყვანილი. "
-"პაროლი სავალდებულოა "
-"%ელ-ფოსტის შესაცვლელად."
+msgid "My cards"
+msgstr "ჩემი ბარათები"
 
-msgid "Invalid phone number."
-msgstr ""
-"ტელეფონის ნომერი არ არის "
-"ვალიდური."
+msgid "Aim/Politician"
+msgstr "მიზანი/პოლიტიკოსი"
 
-msgid "Transaction history"
-msgstr "გადახდების ისტორია"
+msgid "Select card for regular payment"
+msgstr ""
+"აირჩეთ ბარათი ავტომატური "
+"დაფინანსებისთვის"
 
 msgid "Top referrals"
 msgstr "ტოპ რეფერალები"
@@ -4221,20 +4243,21 @@ msgstr "რეფერალური ტრანზაქციები"
 msgid "My credit cards"
 msgstr "ჩემი ბარათები"
 
-msgid "Execution date"
-msgstr "ჩამოჭრის თარიღი"
-
-msgid ""
-"Your password has been successfully changed. Please log in into your "
-"account with new password"
-msgstr ""
-"თქვენი პაროლი წარმატებით "
-"შეიცვალა. გთხოვთ გაიაროთ "
-"ავტორიზაცია ახალი "
-"პაროლით."
-
 msgid "Delete card"
 msgstr "ბარათის წაშლა"
+
+msgid "Credit car was successfully saved"
+msgstr ""
+"ბარათი წარმატებით "
+"დაემატა"
+
+msgid "Regular donation was created"
+msgstr ""
+"ავტომატური დაფინანსების "
+"წარმატებით დაემატა"
+
+msgid "Execution date"
+msgstr "ჩამოჭრის თარიღი"
 
 msgid "Regular donation was successfully updated"
 msgstr ""
@@ -4255,13 +4278,15 @@ msgstr ""
 "რომელიც მოცემულ ბარათზეა "
 "მიბმული"
 
-msgid "My cards"
-msgstr "ჩემი ბარათები"
-
-msgid "Credit car was successfully saved"
-msgstr ""
-"ბარათი წარმატებით "
-"დაემატა"
-
 msgid "Card %s %s was deleted"
 msgstr "ბარათი %s %s წაიშალა"
+
+msgid ""
+"Your password has been successfully changed. Please log in into your "
+"account with new password"
+msgstr ""
+"თქვენი პაროლი წარმატებით "
+"შეიცვალა. გთხოვთ გაიაროთ "
+"ავტორიზაცია ახალი "
+"პაროლით."
+
